# zettelkasten-mcp

./: .dockerignore  .env.example  .foamignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  opencode.json  pyproject.toml  setup.py  zettelkasten-mcp.code-workspace
.github/: copilot-instructions.md
.github/agents/: git-manager.agent.md
.github/instructions/: docs.instructions.md
.github/prompts/: specfact.03-review.prompt.md  specfact.06-sync.prompt.md
.github/workflows/: ci.yml  specfact.yml
.opencode/commands/: opsx-apply.md  opsx-archive.md  opsx-continue.md  opsx-explore.md  opsx-new.md  opsx-propose.md  opsx-verify.md
.specfact/: backlog-config.yaml  ide-prompt-export.yaml
.specfact/gates/config/: enforcement.yaml
.specfact/projects/zettelkasten-mcp/: bundle.manifest.yaml  clarifications.yaml  enrichment_context.md  idea.yaml  product.yaml
.specfact/projects/zettelkasten-mcp/contracts/: FEATURE-NOTE.openapi.yaml  FEATURE-NOTEREPOSITORY.openapi.yaml  FEATURE-REPOSITORY.openapi.yaml  FEATURE-SEARCHSERVICE.openapi.yaml  FEATURE-ZETTELKASTENMCPSERVER.openapi.yaml  FEATURE-ZETTELSERVICE.openapi.yaml
.specfact/projects/zettelkasten-mcp/features/: FEATURE-INFERENCESERVICE.yaml  FEATURE-LINK.yaml  FEATURE-LINKTYPEREGISTRY.yaml  FEATURE-NOTE.yaml  FEATURE-NOTEREPOSITORY.yaml  FEATURE-REPOSITORY.yaml  FEATURE-SEARCHSERVICE.yaml  FEATURE-ZETTELKASTENCONFIG.yaml  FEATURE-ZETTELKASTENMCPSERVER.yaml  FEATURE-ZETTELSERVICE.yaml  advanced-features.yaml  analytics-discovery.yaml  core-enhancements.yaml  fts5-search.yaml  json-responses.yaml  metadata-access.yaml
.specfact/projects/zettelkasten-mcp/reports/brownfield/: analysis-2026-03-20T14-13-46.md  analysis-2026-03-20T14-45-38.md  analysis-2026-03-27T11-26-21.md
.specfact/projects/zettelkasten-mcp/reports/enforcement/: report-2026-03-20T14-58-11.yaml
.specfact/projects/zettelkasten-mcp/reports/enrichment/: zettelkasten-mcp-2026-03-20T14-00-00.enrichment.md
.specfact/reports/: snapshot-2026-03-20.md
.specfact/reports/enforcement/: report-2026-03-20T14-26-36.yaml  report-2026-03-20T14-28-13.yaml  report-2026-03-20T14-29-51.yaml  report-2026-03-20T14-32-23.yaml  report-2026-03-20T14-33-18.yaml  report-2026-03-20T14-36-12.yaml  report-2026-03-20T14-37-50.yaml  report-2026-03-20T14-58-34.yaml  report-2026-03-20T15-53-13.yaml  report-2026-03-27T10-54-22.yaml  report-2026-03-27T11-14-41.yaml  report-2026-03-27T11-15-59.yaml  report-2026-03-27T13-14-39.yaml  report-2026-03-27T13-18-46.yaml
.specify/memory/: constitution.md
docs/: ARCHITECTURE.md  DEBUG-FIXES-2026-01-30.md  IMPROVEMENT-TODO-SPEC.md
docs/archive/: debug-fixes-2026-01-30.md  improvement-spec-2026-01-30.md
docs/guides/: vscode-setup.md
docs/plans/: docker-containerization.md
docs/prompts/chat/: chat-prompt-knowledge-creation-batch.md  chat-prompt-knowledge-creation.md  chat-prompt-knowledge-exploration.md  chat-prompt-knowledge-synthesis.md
docs/prompts/system/: system-prompt-with-protocol.md  system-prompt.md
docs/roadmap/: moscow-top10-features.md
migrations/: __init__.py  add_llm_summary_fields.py
openspec/: ROADMAP.md
openspec/changes/advanced-features/: design.md  tasks.md
openspec/changes/analytics-discovery/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-advanced-features/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-advanced-features/specs/: spec.md
openspec/changes/archive/2026-03-26-api-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-api-foundation/specs/fts5-search/: spec.md
openspec/changes/archive/2026-03-26-api-foundation/specs/json-responses/: spec.md
openspec/changes/archive/2026-03-26-api-foundation/specs/metadata-access/: spec.md
openspec/changes/archive/2026-03-26-core-enhancements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-core-enhancements-v1/: design.md  proposal.md
openspec/changes/archive/2026-03-26-core-enhancements-v1/specs/: spec.md
openspec/changes/archive/2026-03-27-analytics-discovery/: tasks.md
openspec/changes/archive/2026-03-27-analytics-discovery/specs/: spec.md
openspec/changes/archive/2026-03-27-parameterized-sql-security-fix/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-vscode-file-link-uris/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-29-analytics-discovery/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-29-external-folder-indexing/: design.md  proposal.md  tasks.md
openspec/changes/core-enhancements/: tasks.md
openspec/specs/advanced-features/: spec.md
openspec/specs/analytics-discovery/: spec.md
openspec/specs/core-enhancements/: spec.md
openspec/specs/fts5-search/: spec.md
openspec/specs/json-responses/: code-review.md  ideas.md  spec.md  tech-debt.md
openspec/specs/metadata-access/: spec.md
openspec/specs/watch-folder-config/: spec.md
openspec/specs/watch-folder-indexing/: spec.md
openspec/specs/watch-folder-sync/: spec.md
project/: Dockerfile  README.md  docker-compose.yml
scripts/: quality-check.sh  setup-dev.sh
src/zettelkasten_mcp/: __init__.py  __main__.py  config.py  dev.py  main.py  utils.py
src/zettelkasten_mcp/models/: db_models.py  schema.py
src/zettelkasten_mcp/server/: mcp_server.py
src/zettelkasten_mcp/services/: __init__.py  inference_service.py  llm_summary_service.py  search_service.py  summary_cache_service.py  watch_folder_service.py  zettel_service.py
src/zettelkasten_mcp/storage/: base.py  note_repository.py
tests/: conftest.py  test_advanced_features.py  test_analytics_discovery.py  test_auto_or_fallback.py  test_batch_operations.py  test_fts5_enhancements.py  test_integration.py  test_llm_summary_service.py  test_main.py  test_mcp_server.py  test_models.py  test_note_repository.py  test_search_service.py  test_semantic_links.py  test_summary_cache_service.py  test_utils.py  test_watch_folder_config.py  test_watch_folder_readonly.py  test_watch_folder_service.py  test_zettel_service.py
(+11 files in other folders)
