[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zettelkasten-mcp"
version = "1.3.0"
description = "A Zettelkasten knowledge management system as an MCP server"
authors = [
    {name = "Peter J. Herrel", email = "peterherrel@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
    "markdown>=3.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "types-markdown>=3.4.0",
    "pre-commit>=3.6.0",
    "coverage[toml]>=7.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "crosshair-tool>=0.0.102",
    "basedpyright>=1.38.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
show-fixes = true
output-format = "github"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific
]
ignore = [
    "ANN401",   # Dynamically typed expressions (Any)
    "COM812",   # Trailing comma missing — conflicts with ruff formatter
    "D",        # pydocstyle (handled separately if needed)
    "FBT001",   # Boolean positional arg in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "TD002",    # Missing author in TODO
    "TD003",    # Missing issue link in TODO
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # Use of assert
    "PLR2004",  # Magic value used in comparison
    "ANN",      # Type annotations not needed in tests
    "S108",     # /tmp usage acceptable in tests
    "E501",     # Long lines acceptable in tests
]
"tests/test_watch_folder_readonly.py" = [
    "SLF001",   # Private member access is intentional in unit tests
    "PLC0415",  # Inline imports inside patch context managers
    "SIM117",   # Nested with for patch combos
    "PT011",    # Too-broad pytest.raises
    "RUF059",   # Unused unpacked variable
    "C408",     # dict() literal not needed
]
"tests/test_watch_folder_service.py" = [
    "SLF001",   # Private member access is intentional in unit tests
    "PLC0415",  # Inline imports inside patch context managers
    "SIM117",   # Nested with for patch combos
]
"tests/test_watch_folder_config.py" = [
    "SIM117",   # Nested with for tempfile + patch combos
]
"tests/test_note_repository.py" = [
    "SLF001",   # Private member access is intentional in unit tests
]
"tests/test_zettel_service.py" = [
    "SLF001",   # Private member access is intentional in unit tests
]
"src/zettelkasten_mcp/models/*.py" = [
    "A003",     # Class attribute shadows builtin
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 10
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "zettelkasten_mcp.models.db_models"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = """
    --strict-markers
    --strict-config
    --disable-warnings
    --tb=short
    -ra
    --cov=zettelkasten_mcp
    --cov-report=html:htmlcov
    --cov-report=term-missing:skip-covered
    --cov-fail-under=85
    --cov-branch
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security-related tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/zettelkasten_mcp"]
branch = true
omit = [
    "src/zettelkasten_mcp/__init__.py",
    "src/zettelkasten_mcp/__main__.py",
    "src/zettelkasten_mcp/dev.py",
    "tests/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]

[tool.crosshair]
timeout = 60
per_condition_timeout = 10
per_path_timeout = 5
max_iterations = 1000

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "warning"
reportOperatorIssue = "warning"

[dependency-groups]
dev = [
    "pyan3>=2.2.2",
    "types-pyyaml>=6.0.12.20250915",
]
